[iOS][Unity] Fixing DCHECK failure when canceling sign-in

When the user refuse to sign-in with a managed account the current
UnifiedConsentCoordinator should be reused instead of creating a new
UnifiedConsentCoordinator instance.

Bug: 872288
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: Ib851ba3337fa95a39608397f82e336b65000f579
Reviewed-on: https://chromium-review.googlesource.com/c/1288435
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Jérôme Lebel <jlebel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601101}
Former-commit-id: 0a758ceb1ea68541b4eb62d039abd7ca0de3755a